--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@mui/material": "^6.1.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.27.0"
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.27.0",
+        "redux": "^5.0.1"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.7.0",
