--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
         "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^6.1.4",
         "@mui/material": "^6.1.4",
+        "@reduxjs/toolkit": "^2.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
-        "react-router-dom": "^6.27.0",
-        "redux": "^5.0.1",
-        "redux-thunk": "^3.1.0"
+        "react-router-dom": "^6.27.0"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.7.0",
